[package]
name = "rust_experiments"
version = "0.1.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
dropbox-sdk = "0.2.0"
hyper = "0.13.2"
lazy_static = "1.4.0"
rand = "0.7.3"
tokio = { version = "0.2.11", features = ["rt-core", "rt-threaded", "io-util", "time", "process", "macros"] }
url = "2.1.1"