[package]
name = "rust_experiments"
version = "0.1.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
# dropbox-sdk = { version = "0.2.0", default_features = false, features = ["dbx_check"] }
dropbox-sdk = "0.2.0"
hyper = "0.13.2"
hyper010 = { version = "0.10.16", package = "hyper" }
hyper-rustls = "0.19.1"
lazy_static = "1.4.0"
rand = "0.7.3"
serde_json = "1.0.44"
tokio = { version = "0.2.11", features = ["rt-core", "rt-threaded", "io-util", "time", "process", "macros"] }
url = "2.1.1"